<resources>
    <string name="app_name">FavDish</string>
    <string name="add_dish">Add Dish</string>
    <string name="splash_screen_title">FAvDish</string>
    <string name="title_all_dishes">All Dishes</string>
    <string name="title_favorite_dishes">Favorite </string>
    <string name="title_random_dish">Random Dish</string>

    <!--TODO Step 3: Add the string values in the strings.xml file.-->
    <!--START-->
    <string name="image_contentDescription">image</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="lbl_direction_to_cook">Direction To Cook</string>
    <string name="lbl_add_dish">ADD DISH</string>
    <!--END-->
    <string name="title_select_image_action">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>

    <string name="type_selected_dish_type">SELECT DISH TYPE </string>
    <string name="type_selected_dish_category">SELECT DISH CATEGORY</string>
    <string name="type_selected_dish_time">SELECT COOKING TIME IN MINUTES </string>
    <string name="label_no_dishes_added_yet">No dishes Added Yet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dish_detail">Dish Detail</string>
    <string name="lbl_estimate_cooking_time">The approx time to create the meal</string>
    <string name="msg_added_to_favorites">Added to Favorites</string>
    <string name="msg_removed_to_favorites">Removed from Favorites</string>
    <string name="action_edit_dish">EDIT DISH</string>
    <string name="action_delete_dish">DELETE DISH</string>

    <string name="title_add_dish">Add Dish</string>
    <string name="title_edit_dishes">Edit Dish</string>
    <string name="lbl_update_dishes">UPDATE Dish</string>
    <string name="title_delete_dish">Delete Dish</string>
    <string name="msg_delete_dish_dialog">Are you sure you wants to delete %1$s. </string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="action_filter_dishes">Filter Dishes</string>
    <string name="title_Select_item_to_filter">SELECET ITEN TO FILTER</string>
    <string name="msg_already_added_to_favorite">You Have already added to your Favorite</string>
    <string name="please_wait">Please Wait!</string>
    <string name="action_share_dish">Share Dish</string>
    <string name="notification_title">Checkout new dish recipes</string>
    <string name="notification_subtitle">Tap for more detail</string>
</resources>
